--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: sunspot
-Title: What the Package Does (One Line, Title Case)
+Title: Spatial Structure Analysis of Spatial Omics Data
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Samuel", "Gunz", , "samuel.gunz@uzh.ch", role = c("aut", "cre"),
+           comment = c(ORCID = "000-0002-8909-0932"))
+Description: Reconstruction, quantification and comparison of spatial structures 
+    from spatial omics data.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
