--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: sunspot
-Title: Spatial Structure Analysis of Spatial Omics Data
+Title: Spatial Structure Analysis in Spatial Omics Data
 Version: 0.0.0.9000
 Authors@R: 
     person("Samuel", "Gunz", , "samuel.gunz@uzh.ch", role = c("aut", "cre"),
@@ -12,3 +12,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
 URL: https://github.com/sgunz/sunspot
 BugReports: https://github.com/sgunz/sunspot/issues
+Imports: 
+    EBImage,
+    sf,
+    smoothr,
+    stats
