before removing simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,7 @@ export(st_feature_axes)
 export(st_plotSim)
 export(totalShapeMetrics)
 import(sf)
+import(spatstat.explore)
+import(spatstat.geom)
+import(stats)
+import(terra)
