--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,19 @@
 export(binaryImageToSF)
 export(getDimXY)
 export(meanShapeMetrics)
-export(plotSim)
+export(normalizeCoordinates)
 export(reconstructShapeDensity)
 export(reconstructShapeLRT)
 export(shapeMetrics)
-export(simulateTissueBlobs)
 export(st_calculateCurvature)
 export(st_calculateShapeCurl)
 export(st_feature_axes)
-export(st_plotSim)
 export(totalShapeMetrics)
+export(xyCoordinates)
 import(sf)
 import(spatstat.explore)
 import(spatstat.geom)
 import(stats)
-import(terra)
+importFrom(EBImage,resize)
+importFrom(terra,as.polygons)
+importFrom(terra,rast)
