--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     spatstat.explore,
     spatstat.geom,
     stats,
+    SpatialExperiment,
+    SpatialFeatureExperiment
 Suggests:
     dplyr,
     ggplot2
