--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(getDimXY)
 export(meanShapeMetrics)
 export(normalizeCoordinates)
 export(reconstructShapeDensity)
+export(reconstructShapeDensityImage)
+export(reconstructShapeDensitySPE)
 export(reconstructShapeLRT)
 export(shapeMetrics)
 export(st_calculateCurvature)
@@ -22,5 +24,15 @@ import(spatstat.explore)
 import(spatstat.geom)
 import(stats)
 importFrom(EBImage,resize)
+importFrom(dplyr,bind_rows)
+importFrom(parallel,mclapply)
+importFrom(raster,xmax)
+importFrom(raster,xmin)
+importFrom(raster,ymax)
+importFrom(raster,ymin)
 importFrom(terra,as.polygons)
 importFrom(terra,rast)
+importFrom(terra,xmax)
+importFrom(terra,xmin)
+importFrom(terra,ymax)
+importFrom(terra,ymin)
