new functions; checks failing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(SPE2ppp)
 export(binaryImageToSF)
 export(calculateLine)
+export(estimateKernelDensitySPE)
 export(findCenterCoord)
 export(getDimXY)
 export(meanShapeMetrics)
@@ -11,6 +12,7 @@ export(reconstructShapeDensity)
 export(reconstructShapeDensityImage)
 export(reconstructShapeDensitySPE)
 export(reconstructShapeLRT)
+export(shapeIntensityImage)
 export(shapeMetrics)
 export(st_calculateCurvature)
 export(st_calculateShapeCurl)
