--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(SPE2ppp)
 export(binaryImageToSF)
 export(calculateLine)
-export(estimateKernelDensitySPE)
+export(estimateReconstructionParametersSPE)
 export(findCenterCoord)
+export(findIntensityThreshold)
 export(getDimXY)
 export(meanShapeMetrics)
 export(normalizeCoordinates)
@@ -27,11 +28,17 @@ import(spatstat.geom)
 import(stats)
 importFrom(EBImage,resize)
 importFrom(dplyr,bind_rows)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_equal)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_viridis_c)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,theme_light)
 importFrom(parallel,mclapply)
-importFrom(raster,xmax)
-importFrom(raster,xmin)
-importFrom(raster,ymax)
-importFrom(raster,ymin)
+importFrom(patchwork,wrap_plots)
 importFrom(terra,as.polygons)
 importFrom(terra,rast)
 importFrom(terra,xmax)
