fix in binary to sf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(ggplot2,theme_light)
 importFrom(parallel,mclapply)
 importFrom(patchwork,wrap_plots)
 importFrom(terra,as.polygons)
+importFrom(terra,ext)
 importFrom(terra,rast)
 importFrom(terra,xmax)
 importFrom(terra,xmin)
