--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ import(stats)
 importFrom(EBImage,resize)
 importFrom(dplyr,bind_rows)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_tile)
