--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: sosta
-Title: Spatial Omics Structure Analysis
+Title: A package for the analysis of morphologically-relevant structures in spatial omics data
 Version: 0.0.0.9000
 Authors@R: c(
     person("Samuel", "Gunz", , "samuel.gunz@uzh.ch", role = c("aut", "cre"),
-           comment = c(ORCID = "000-0002-8909-0932")),
+           comment = c(ORCID = "0000-0002-8909-0932")),
     person("Mark D.", "Robinson", role=c("aut", "fnd"), 
 	    email="mark.robinson@uzh.ch"))
-Description: A framework to reconstruct, characterise and compare spatial structures from spatial omics data.
+Description: The `sosta` (Spatial Omics Structure Analysis) package is designed for analyzing spatial omics data to study tissue organization at a anatomical structure level. It reconstructs morphologically-relevant structures based on molecular features or cell types and calculates various metrics such as shape characteristics. The package is designed to integrate with other packages for the analysis of spatial omics data.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
