--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ import(spatstat.geom)
 import(stats)
 importFrom(EBImage,resize)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_equal)
@@ -39,6 +40,7 @@ importFrom(ggplot2,scale_color_viridis_c)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_light)
 importFrom(parallel,mclapply)
+importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
 importFrom(terra,as.polygons)
 importFrom(terra,ext)
