--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/sgunz/sosta, https://sgunz.github.io/sosta/
 BugReports: https://github.com/sgunz/sosta/issues
+biocViews: Software, Spatial, Transcriptomics, Visualization
 Imports: 
-    EBImage,
     terra,
     sf,
     smoothr,
