added fix for eccentricity calculation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ importFrom(ggplot2,theme_light)
 importFrom(parallel,mclapply)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
+importFrom(sf,st_coordinates)
+importFrom(sf,st_minimum_rotated_rectangle)
 importFrom(terra,as.polygons)
 importFrom(terra,ext)
 importFrom(terra,rast)
