--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,7 @@
 
 export(SPE2ppp)
 export(binaryImageToSF)
-export(calculateLine)
 export(estimateReconstructionParametersSPE)
-export(findCenterCoord)
 export(findIntensityThreshold)
 export(getDimXY)
 export(meanShapeMetrics)
@@ -20,11 +18,10 @@ export(st_feature_axes)
 export(totalShapeMetrics)
 export(xyCoordinates)
 import(SpatialExperiment)
-import(SpatialFeatureExperiment)
 import(sf)
 import(spatstat.explore)
 import(spatstat.geom)
-import(stats)
+importFrom(SummarizedExperiment,colData)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
@@ -40,8 +37,10 @@ importFrom(ggplot2,theme_light)
 importFrom(parallel,mclapply)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
+importFrom(rlang,.data)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_minimum_rotated_rectangle)
+importFrom(stats,density)
 importFrom(terra,as.polygons)
 importFrom(terra,ext)
 importFrom(terra,rast)
