--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: `sosta` (Spatial Omics STructure Analysis) is a package for analyzi
     or cell types. It further calculates a range of structural and shape metrics
     to quantitatively describe tissue architecture. The package is designed to integrate 
     with other packages for the analysis of spatial (omics) data.
-License: GPL (>= 3)
+License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
